# GitSentinel

./: .gitignore  gitsentinel.json  gitsentinel_report.json  pyproject.toml
GitSentinel/: cli.py
GitSentinel/scanners/: entropy.py  secret_detector.py
tests/: test.py
