[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsentinel"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
]

[project.scripts]
gitsentinel = "gitsentinel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitsentinel*"]